# iclab_pcl_tutorial

./: .gitignore  README.md  pcl_filters.cpp
L1/: single.pcd  tiny.pcd
L1/pcd_write/: CMakeLists.txt  pcd_write.cpp
L1/pcl_basic/: CMakeLists.txt  pcl_basic.cpp
L1/rgb_channels/: CMakeLists.txt  rgb_channels.cpp
L1/src/ros_pcl_sub_pub/: CMakeLists.txt  README.md  package.xml
L1/src/ros_pcl_sub_pub/src/: ros_pcl_sub_pub.cpp
L2/pcl_downsample/: CMakeLists.txt  pcl_downsample.cpp
L2/pcl_filters/: CMakeLists.txt  pcl_filter_code.cpp
L2/pcl_smooth/: CMakeLists.txt  pcl_smooth.cpp
L2/pcl_upsample/: CMakeLists.txt  pcl_upsample.cpp
L3/: pcl_registration_pipline.cpp
L4/: 20221017_regiongrow_sac.cpp
L4/region_grow/: CMakeLists.txt  pcl_region_grow.cpp
L4/region_grow_rgb/: CMakeLists.txt  pcl_region_grow_rgb.cpp
L4/sac_cylinder/: CMakeLists.txt  pcl_sac_segmentation.cpp  readme_vtk.txt  sac_cylinder.cpp
L4/sac_segmentation/: CMakeLists.txt  pcl_sac_segmentation.cpp
docker_ros1_ubuntu20/: Dockerfile  build.sh  entrypoint.sh  get_param.sh  run.sh
docker_ros1_ubuntu20/config/pip/: requirements.txt
docker_ros1_ubuntu20/config/shell/: bash_setup.sh
docker_ros1_ubuntu20/config/shell/tmux/: README.adoc  tmux_setup.sh
docker_ros2_ubuntu22/: Dockerfile  build.sh  entrypoint.sh  run.sh
docker_ros2_ubuntu22/config/pip/: pip_setup.sh
docker_ros2_ubuntu22/config/shell/terminator/: config  terminator_setup.sh
docker_ros2_ubuntu22/config/shell/tmux/: tmux.conf
example_data/: cloud_ascii.pcd  cloud_binary.pcd  scene_D405.pcd  scene_D405.ply  scene_D405_cut.pcd  scene_D435i.pcd  scene_D435i.ply
